k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: Assistant Bot
  labels:
    app.kubernetes.io/name: assistant-bot
